crates/arwen-macho/tests/snapshots/macho_tests__rpath_add@ls-2.snap
---
source: crates/arwen-macho/tests/macho_tests.rs
expression: changed_macho.rpaths
---
[
    "path_graf",
    "abababababababababababaabbababababababababab",
]
