crates/arwen-macho/tests/snapshots/macho_tests__rpath_change@hello_with_rpath-3.snap
---
source: crates/arwen-macho/tests/macho_tests.rs
expression: macho_container.data.len()
---
33440
