crates/arwen-macho/tests/snapshots/macho_tests__rpath_remove@ls-3.snap
---
source: crates/arwen-macho/tests/macho_tests.rs
expression: macho_container.data.len()
---
53040
